# starmap

./: .gitignore  CMakeLists.txt  Makefile.am  README  colors.cpp  colors.h  configure.in  const.txt  import.cc  import.cpp  import.h  maths.cpp  maths.h  mkinstalldirs  readbase.cpp  readbase.h  readbright.cpp  readbright.h  readgliese.cpp  readgliese.h  starlist.cpp  starlist.h  starmap.cc  starmap.cpp  starmap.h
gliese/: ReadMe
